feat(#5): implemented mouse and hover actions
